--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Fanxingwufeng.github.com by fanXingWuFeng</title>
+    <title>吴峰的个人主页</title>
   </head>
 
   <body>
