--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
     <div class="container">
       <section id="main_content">
         <h1>
-<a name="wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6" class="anchor" href="#wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6"><span class="octicon octicon-link"></span></a>WuFeng's Blog开博啦</h1>
-
-<p>由于csdn用户密码丢了，只有转战GitHub写博客了，而且觉得GitHub高端大气上档次，全是英格里曲，本来想用英语写，算了，英语臭的不行。虽然GitHub还有很多没有弄懂，但是好歹迈出了一步，再接再厉！</p>
+<a name="wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6" class="anchor" href="#wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6"><span class="octicon octicon-link"></span></a>个人简历</h1>
       </section>
     </div>
-
+    <article>
+      <section>
+        <p>求职意愿：j2e开发人员           性别：  男</p>
+      </section>
+    </article>
     
   </body>
 </html>
