--- a/index.html
+++ b/index.html
@@ -28,13 +28,23 @@
       <section id="main_content">
         <h1>
 <a name="wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6" class="anchor" href="#wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6"><span class="octicon octicon-link"></span></a>个人简历</h1>
+        <div class="leftFloat">
+          <section id="1">
+            <p>求职意愿：j2e开发人员</p>
+            <p>英语水平：CET-4</p>
+            <p>电话号码：18720978491</p>
+          </section>
+        </div>
+        <div class="rightFloat">
+          <section id="2">
+            <p>性别:  男</p>
+            <p>邮箱:  18720978491@163.comCET-4</p>
+            <p>博客地址:http://blog.csdn.net/u012157999</p>
+          </section>
+        </div>
       </section>
     </div>
-    <article>
-      <section>
-        <p>求职意愿：j2e开发人员           性别：  男</p>
-      </section>
-    </article>
+    
     
   </body>
 </html>
