--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>电话号码：18720978491</p>
           </section>
         </div>
-        <div class="rightFloat">
+        <div class="rightFloat" style="float:left">
           <section id="2">
             <p>性别:  男</p>
             <p>邮箱:  18720978491@163.comCET-4</p>
