--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <section id="main_content">
         <h1>
 <a name="wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6" class="anchor" href="#wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6"><span class="octicon octicon-link"></span></a>个人简历</h1>
-        <div class="leftFloat">
+        <div class="leftFloat"style="width:50%">
           <section id="1">
             <p>求职意愿：j2e开发人员</p>
             <p>英语水平：CET-4</p>
             <p>电话号码：18720978491</p>
           </section>
         </div>
-        <div class="rightFloat" style="float:left">
+        <div class="rightFloat" style="width:50%;float:left">
           <section id="2">
             <p>性别:  男</p>
             <p>邮箱:  18720978491@163.comCET-4</p>
