--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
         <h1>
 <a name="wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6" class="anchor" href="#wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6"><span class="octicon octicon-link"></span></a>个人简历</h1>
         <div class="leftFloat">
+          <section id="1">
             <pre>求职意愿：j2e开发人员                  性别:    男</pre>
             <pre>英语水平：CET-4                        邮箱:    18720978491@163.comCET-4</pre>
             <pre>电话号码：18720978491                  博客地址:http://blog.csdn.net/u012157999</pre>
+          </section>
         </div>
         
       </section>
