--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
             <pre>电话号码：18720978491                  博客地址:http://blog.csdn.net/u012157999</pre>
           </section>
         </div>
-        
+        <div class="content">
+          <section id="2">
+            <p><b>专业技能</b></pre>
+            <pre><input type="checkbox"name="test"checked/>    熟悉spring框架、dwz框架</pre>
+          </section>
+        </div>
       </section>
     </div>
     
