--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
         </div>
         <div class="content">
           <section id="2">
-            <p><b>专业技能</b></pre>
-            <pre><input type="checkbox"name="test"checked/>    熟悉spring框架、dwz框架</pre>
+            <p><b>专业技能</b></p>
+            <p><input type="checkbox"name="test"checked/>熟悉spring框架、dwz框架</p>
+            <p><input type="checkbox"name="test"checked/>了解html、css、javascript、php</p>
+            <p><input type="checkbox"name="test"checked/>了解sql server2008、mysql数据库使用</p>
           </section>
         </div>
       </section>
