--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <section id="main_content">
         <h1>
 <a name="wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6" class="anchor" href="#wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6"><span class="octicon octicon-link"></span></a>个人简历</h1>
+<br/><br/>
         <div class="leftFloat">
           <section id="1">
             <pre>求职意愿：j2e开发人员                  性别:    男</pre>
@@ -41,6 +42,35 @@
             <p><input type="checkbox"name="test"checked/>熟悉spring框架、dwz框架</p>
             <p><input type="checkbox"name="test"checked/>了解html、css、javascript、php</p>
             <p><input type="checkbox"name="test"checked/>了解sql server2008、mysql数据库使用</p>
+          </section>
+        </div>
+        <div class="down">
+          <section id="3">
+            <p><b>教育背景</b></p>
+            <pre>2012.09~2016.06      江西财经大学     软件工程</pre>
+          </section>
+        </div>
+        <div class="low">
+          <section id="4">
+            <p><b>项目经验</b></p>
+            <p>项目名称：江西财经大学寝室报修系统</p>
+            <p>项目描述：实现同学能网上报修寝室坏的东西</p>
+            <p>项目技术：Java、spring、dwz</p>
+            <p>项目收获：参与这个项目让自己学到不少东西，尤其是dwz框架的使用，<br/><br/>以及感受了实际项目的氛围，也学会了如何更好的和别人一起合作</p>
+          </section>
+        </div>
+        <div class="litle">
+          <section id="5">
+            <p><b>自我评价</b></p>
+            <p><input type="checkbox"name="test"checked/>性格开朗，能够带动团队氛围</p>
+            <p><input type="checkbox"name="test"checked/>对新技术感兴趣，广泛关注行业知识、动向</p>
+            <p><input type="checkbox"name="test"checked/>是一个开源热爱者</p>
+          </section>
+        </div>
+         <div class="like">
+          <section id="6">
+            <p><b>兴趣爱好</b></p>
+            <pre>喜欢看科幻电影、对新事物感兴趣、喜欢打篮球</pre>
           </section>
         </div>
       </section>
