--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="down">
           <section id="3">
             <p><b>教育背景</b></p>
-            <pre>2012.09~2016.06      江西财经大学     软件工程</pre>
+            <p>2012.09~2016.06      江西财经大学     软件工程</p>
           </section>
         </div>
         <div class="low">
