--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <br/><br/>
         <div class="leftFloat">
           <section id="1">
-            <pre>求职意愿：j2e开发人员                  性别:    男</pre>
+            <pre>求职意愿：web开发人员                  性别:    男</pre>
             <pre>英语水平：CET-4                        邮箱:    18720978491@163.comCET-4</pre>
             <pre>电话号码：18720978491                  博客地址:http://blog.csdn.net/u012157999</pre>
           </section>
@@ -56,7 +56,7 @@
             <p>项目名称：江西财经大学寝室报修系统</p>
             <p>项目描述：实现同学能网上报修寝室坏的东西</p>
             <p>项目技术：Java、spring、dwz</p>
-            <p>项目收获：参与这个项目让自己学到不少东西，尤其是dwz框架的使用，<br/><br/>以及感受了实际项目的氛围，也学会了如何更好的和别人一起合作</p>
+            <p>项目收获：参与这个项目让自己学到不少东西，尤其是dwz框架的使用，<br/><br/>最重要的学会团队的协作</p>
           </section>
         </div>
         <div class="litle">
@@ -70,7 +70,7 @@
          <div class="like">
           <section id="6">
             <p><b>兴趣爱好</b></p>
-            <pre>喜欢看科幻电影、对新事物感兴趣、喜欢打篮球</pre>
+            <p>喜欢看科幻电影、对新事物感兴趣、喜欢打篮球</p>
           </section>
         </div>
       </section>
