--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="leftFloat">
           <section id="1">
             <pre>求职意愿：web开发人员                  性别:    男</pre>
-            <pre>英语水平：CET-4                        邮箱:    18720978491@163.comCET-4</pre>
+            <pre>英语水平：CET-4                        邮箱:    18720978491@163.com</pre>
             <pre>电话号码：18720978491                  博客地址:http://blog.csdn.net/u012157999</pre>
           </section>
         </div>
