--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 <a name="wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6" class="anchor" href="#wufengs-blog%E5%BC%80%E5%8D%9A%E5%95%A6"><span class="octicon octicon-link"></span></a>个人简历</h1>
 <br/><br/>
         <div class="leftFloat">
-          <section id="1">
+          <section id="main_content">
             <pre>求职意愿：web开发人员                  性别:    男</pre>
             <pre>英语水平：CET-4                        邮箱:    18720978491@163.com</pre>
             <pre>电话号码：18720978491                  博客地址:http://blog.csdn.net/u012157999</pre>
           </section>
         </div>
         <div class="content">
-          <section id="2">
+          <section id="main_content">
             <p><b>专业技能</b></p>
             <p><input type="checkbox"name="test"checked/>熟悉spring框架、dwz框架</p>
             <p><input type="checkbox"name="test"checked/>了解html、css、javascript、php</p>
@@ -45,13 +45,13 @@
           </section>
         </div>
         <div class="down">
-          <section id="3">
+          <section id="main_content">
             <p><b>教育背景</b></p>
             <p>2012.09~2016.06      江西财经大学     软件工程</p>
           </section>
         </div>
         <div class="low">
-          <section id="4">
+          <section id="main_content">
             <p><b>项目经验</b></p>
             <p>项目名称：江西财经大学寝室报修系统</p>
             <p>项目描述：实现同学能网上报修寝室坏的东西</p>
@@ -60,7 +60,7 @@
           </section>
         </div>
         <div class="litle">
-          <section id="5">
+          <section id="main_content">
             <p><b>自我评价</b></p>
             <p><input type="checkbox"name="test"checked/>性格开朗，能够带动团队氛围</p>
             <p><input type="checkbox"name="test"checked/>对新技术感兴趣，广泛关注行业知识、动向</p>
@@ -68,7 +68,7 @@
           </section>
         </div>
          <div class="like">
-          <section id="6">
+          <section id="main_content">
             <p><b>兴趣爱好</b></p>
             <p>喜欢看科幻电影、对新事物感兴趣、喜欢打篮球</p>
           </section>
