--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <pre>电话号码：18720978491                  博客地址:http://blog.csdn.net/u012157999</pre>
           </section>
         </div>
-        <div class="content">
+        <div class="leftFloat">
           <section id="main_content">
             <p><b>专业技能</b></p>
             <p><input type="checkbox"name="test"checked/>熟悉spring框架、dwz框架</p>
@@ -44,13 +44,13 @@
             <p><input type="checkbox"name="test"checked/>了解sql server2008、mysql数据库使用</p>
           </section>
         </div>
-        <div class="down">
+        <div class="leftFloat">
           <section id="main_content">
             <p><b>教育背景</b></p>
             <p>2012.09~2016.06      江西财经大学     软件工程</p>
           </section>
         </div>
-        <div class="low">
+        <div class="leftFloat">
           <section id="main_content">
             <p><b>项目经验</b></p>
             <p>项目名称：江西财经大学寝室报修系统</p>
@@ -59,7 +59,7 @@
             <p>项目收获：参与这个项目让自己学到不少东西，尤其是dwz框架的使用，<br/><br/>最重要的学会团队的协作</p>
           </section>
         </div>
-        <div class="litle">
+        <div class="leftFloat">
           <section id="main_content">
             <p><b>自我评价</b></p>
             <p><input type="checkbox"name="test"checked/>性格开朗，能够带动团队氛围</p>
@@ -67,7 +67,7 @@
             <p><input type="checkbox"name="test"checked/>是一个开源热爱者</p>
           </section>
         </div>
-         <div class="like">
+         <div class="leftFloat">
           <section id="main_content">
             <p><b>兴趣爱好</b></p>
             <p>喜欢看科幻电影、对新事物感兴趣、喜欢打篮球</p>
